# AI-Healthcare-System

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.enterprise  Dockerfile.hf  GEMINI.md  Kolkuri_Priyanka_Resume.tex  LICENSE  README.md  active_handoff.md  check.py  debug_chat_stream.py  debug_db.py  debug_test.py  docker-compose.enterprise.yml  docker-compose.microservices.yml  docker-compose.prod.yml  docker-compose.yml  fix.py  fix_db_schema.py  fix_syntax.py  force_hf_sync.py  force_hf_sync2.py  healthcare.db-shm  healthcare.db-wal  index.html  kaggle_run_logs.txt  llms.txt  patch_all_tooltips.py  patch_prediction.py  patch_prediction2.py  patch_tooltips.py  (+17 more)
.Jules/: palette.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  labels.yml  release-drafter-config.yml
airflow/: README.md  airflow_config.py
android/: settings.gradle.kts
android_app/: local.properties
backend/: AGENTS.md  CONTEXT.md  abdm.py  acid_saga_coordinator.py  admin.py  advanced_ai.py  advanced_data_modeling.py  agent.py  ai_function_registry.py  ai_governance.py  ai_rag_triad_evaluator.py  ai_safety.py  appointments.py  assessments.py  audit_log.py  auth.py  axiom_logger.py  backup_readiness.py  billing.py  breach_notification.py  cache_service.py  cache_warmer.py  care_events.py  care_plans.py  cds_hooks.py  chat.py  chat_context.py  claims.py  claims_denial.py  clinical_indices.py  (+120 more)
rust_gateway/: Cargo.toml  build.rs
rust_gateway/proto/: interop.proto
rust_gateway/src/: appointments.rs  auth.rs  claims.rs  codec.rs  fhir.rs  interop_grpc.rs  lib.rs  main.rs  tee_enclave.rs  telehealth.rs  telemetry.rs  vector_store.rs
(+1046 files in other folders)
