[package]
name = "rust_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1.3"
bcrypt = "0.19.2"
dotenvy = "0.15.7"
serde_urlencoded = "0.7.1"
