[package]
name = "rust_gateway"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_gateway_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.8.9"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace", "compression-full"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1.3"
bcrypt = "0.19.2"
dotenvy = "0.15.7"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
sysinfo = "0.33.0"
rmp-serde = "1.3.0"
pyo3 = { version = "*", features = ["extension-module"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
rayon = "*"
arc-swap = "*"
rkyv = { version = "*", features = ["validation"] }
mimalloc = "*"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
